# extractor

./: README.md  config.toml  pyproject.toml
extractor/: Parser.py  __init__.py  __main__.py  cli.py  parsers.py  selectors.py
extractor/errors/: __init__.py
extractor/helpers/: __init__.py
extractor/models/: Article.py  Journal.py  __init__.py
test/: test_Article.py  test_Author.py  test_Citation.py  test_Parser.py  test_helpers.py
test/test_helpers/: test_classify_url_by_journal.py  test_download_article.py
test/test_models/: test_Article.py  test_Citation.py
tests/test_helpers/: test_download_article.py  test_validate_url.py
tests/test_models/: test_Author.py
